Added correct tomcat log